<resources>
    <string name="app_name">HTC Mobile</string>
    <string name="load_more_data">Tải thêm dữ liệu</string>
    <string name="dlg_ok">Đồng ý</string>
    <string name="dlg_cancel">Hủy</string>
    <string name="mesage_turn_on_gps">Bạn có muốn bật GPS?</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="loading">Đang tải. Vui lòng chờ…</string>
    <string name="login_title">Đăng nhập</string>
    <string name="phone">Số điện thoại</string>
    <string name="login">Đăng nhập</string>
    <string name="login_error_input_phone">Vui lòng điền số điện thoại trước khi đăng nhập.</string>
    <string name="login_resent_code">Đã gửi lại mã OTP.</string>
    <string name="login_tips">Sau khi đăng nhập, bạn sẽ có thể sử dụng những công cụ hỗ trợ dành cho thành viên Hyundai.</string>
    <string name="login_ver">Phiên bản 1.0.1</string>
    <string name="term_title">Thỏa thuận người dùng</string>
    <string name="term_accpect">Đồng ý</string>
    <string name="add_car_car_name">Tên xe:</string>
    <string name="add_car_agency">Đại lý mua:</string>
    <string name="add_car_number_vin">Số VIN</string>
    <string name="add_car_license_plate">Biển số xe (*)</string>
    <string name="add_car_tip_license_plate">Biển số viết liền không dùng dấu . và dấu cách</string>
    <string name="add_car_hint_date_purchase">dd/mm/yyyy</string>
    <string name="add_car_date_purchase">Ngày mua:</string>
    <string name="add_car_error_add_empty">Quý khách vui lòng điền đầy đủ các thông tin.</string>
    <string name="add_car_error_vin_number">Số VIN không hợp lệ.</string>
    <string name="add_car_error_licensePlate">Biển số xe không hợp lệ.</string>
    <string name="add_car_error_invalid_date">Ngày mua không hợp lệ.</string>
    <string name="add_car_success_add">Thêm xe thành công!</string>
    <string name="add_car_success_edit">Sửa thông tin xe thành công!</string>
    <string name="add_car_title">Thêm xe</string>
    <string name="add_car_confirm_yes">Đồng ý</string>
    <string name="add_car_confirm_no">Từ chối</string>
    <string name="add_car_confirm_message">Bạn muốn xóa xe?</string>
    <string name="add_car_btn_save">Lưu</string>
    <string name="add_car_btn_add">Thêm xe</string>
    <string name="profile_info_hint_name">Tên khách hàng</string>
    <string name="add_car_edit_title">Sửa thông tin xe</string>
    <string name="add_car_add_title">Thêm xe</string>
    <string name="add_car_tip">Quý khách vui lòng điền đầy đủ các thông tin có dấu (*)</string>
    <string name="profile_title">Thông tin cá nhân</string>
    <string-array name="profile_arr_tab_title">
        <item>Thông tin\ncá nhân</item>
        <item>Thông tin\nxe</item>
        <item>Thẻ\nhội viên</item>
    </string-array>
    <string name="profile_confirm_save_need_change_tab">Bạn có muốn lưu lại thay đổi không?</string>
    <string name="profile_confirm_exit">Bạn có muốn lưu thay đổi và trở lại màn hình trước không?</string>
    <string name="profile_title_change_avatar">Chọn ảnh đại diện</string>
    <string name="profile_change_avatar_pick_gallery">Thư viện ảnh</string>
    <string name="profile_change_avatar_pick_camera">Máy ảnh</string>
    <string name="profile_error_get_profile">Quý khách chưa đăng nhập. Vui lòng đăng nhập và thử lại.</string>
    <string name="profile_info_hint_phone">Số điện thoại</string>
    <string name="profile_info_hint_brithday">Ngày sinh</string>
    <string name="profile_info_hint_identify_id">CMND/căn cước/hộ chiếu</string>
    <string name="profile_info_hint_email">Email</string>
    <string name="profile_info_hint_adress">Địa chỉ</string>
    <string name="profile_info_logout">Đăng xuất</string>
    <string name="profile_info_edit">Sửa thông tin cá nhân</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="menu_personal_information">Thông tin cá nhân</string>
    <string name="menu_maintenance_schedule">Nhắc lịch bảo dưỡng</string>
    <string name="menu_setting">Cài đặt</string>
    <string name="menu_login">Đăng nhập</string>
    <string name="make_appointment_error_date_empty">Ngày hẹn không được để trống</string>
    <string name="make_appointment_error_empty_licenseplates">Biển số xe không được để trống</string>
    <string name="make_appointment_error_empty_services">Bạn chưa chọn dịch vu nào.</string>
    <string name="make_appointment_info_choose_profile">Lấy từ thông tin xe</string>
    <string name="make_appointment_info_choose_new">Chọn xe mới</string>
    <string name="make_appointment_add_car">Thêm vào thông tin xe</string>
    <string name="make_appointment_update_profile">Thêm vào thông tin cá nhân</string>
    <string name="service_make_appointment_title">Đặt lịch hẹn</string>
    <string name="service_make_appointment_previous">Quay lại</string>
    <string name="service_make_appointment_next">Tiếp theo</string>
    <string name="service_make_appointment_sussess">Hoàn thành</string>
    <string name="service_make_appointment_done">Về trang chủ</string>
    <string name="make_appointment_error_empty">Vui lòng nhập đủ các trường có dấu (*)</string>
    <string name="make_appointment_error_date_format">Ngày hẹn không hợp lệ.</string>
    <string name="make_appointment_error_time_format">Giờ hẹn không hợp lệ.</string>
    <string name="make_appointment_error_name">Họ tên không hợp lệ.</string>
    <string name="make_appointment_error_email">Địa chỉ email không hợp lệ.</string>
    <string name="make_appointment_error_phone">Số điện thoại không hợp lệ.</string>
    <string name="make_appointment_error_license_plates">Biển số xe không hợp lệ.</string>
    <string-array name="make_appointment_service_list_item">
        <item>Bảo hành</item>
        <item>Bảo dưỡng</item>
        <item>Sửa chữa chung</item>
        <item>Sửa thân xe và sơn</item>
        <item>Kiểm tra và triệu hồi</item>
    </string-array>
    <string name="make_appointment_service_list_title">Chọn dịch vụ</string>
    <string name="make_appointment_info_title">Thông tin lịch hẹn</string>
    <string name="make_appointment_info_tips">Quý khách vui lòng đặt hẹn trước 4 tiếng làm việc để được phục vụ tốt hơn.</string>
    <string name="make_appointment_info_date">Ngày dự kiến (*)</string>
    <string name="make_appointment_info_time">Thời gian dự kiến (*)</string>
    <string name="make_appointment_info_city">Thành Phố (*)</string>
    <string name="make_appointment_info_agency">Đại lý (*)</string>
    <string name="make_appointment_info_service_staff">Nhân viên phục vụ</string>
    <string name="make_appointment_info_tips_2">Quý khách vui lòng điền đầy đủ các thông tin có dấu (*)</string>
    <string name="make_appointment_info_hint_date">dd/mm/yyyy</string>
    <string name="make_appointment_info_hint_service_staff" />
    <string-array name="make_appointment_info_arr_time">
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
    </string-array>
    <string name="make_appointment_info_customer_title">Thông tin khách hàng</string>
    <string name="make_appointment_info_customer_title_2">Thông tin cá nhân</string>
    <string name="make_appointment_info_customer_full_name">Họ tên (*)</string>
    <string name="make_appointment_info_customer_email">Email (*)</string>
    <string name="make_appointment_info_customer_phone">Số điện thoại (*)</string>
    <string name="make_appointment_info_customer_note">Yêu cầu sửa chữa</string>
    <string name="make_appointment_info_customer_car_title">Thông tin xe</string>
    <string name="make_appointment_info_customer_car_category">Mẫu xe</string>
    <string name="make_appointment_info_customer_car_versions">Phiên bản</string>
    <string name="make_appointment_info_customer_car_license_plate">Biển số (*)</string>
    <string name="make_appointment_info_customer_full_name_hint">Nhập họ tên</string>
    <string name="make_appointment_info_customer_email_hint">Nhập email</string>
    <string name="make_appointment_info_customer_phone_hint">Nhập số điện thoại</string>
    <string name="make_appointment_info_customer_title_hint">Nhập tiêu đề</string>
    <string name="make_appointment_info_customer_message_hint">Nhập nội dung</string>
    <string name="make_appointment_info_customer_license_plate">Nhập biển số xe</string>
    <string name="make_appointment_info_customer_note_hint">Nhập dữ liệu</string>
    <string name="make_appointment_info_customer_license_place_hint">Nhập biển số xe</string>
    <string-array name="make_appoint_arr_honorific">
        <item>Ông</item>
        <item>Bà</item>
        <item>Anh</item>
        <item>Chị</item>
    </string-array>
    <string name="make_appointment_preview_title">Hoàn tất đăng ký</string>
    <string name="make_appointment_preview_title_2">Xin cảm ơn quý khách đã tin tưởng sử\ndụng dịch vụ của chúng tôi.</string>
    <string name="make_appointment_preview_tips">Chúng tôi xin xác nhận thông tin đăng ký của quý khách như sau:</string>
    <string name="make_appointment_preview_customer_title">Thông tin khách hàng:</string>
    <string name="make_appointment_preview_customer_full_name">Tên khách hàng:</string>
    <string name="make_appointment_preview_customer_phone">Số điện thoại:</string>
    <string name="make_appointment_preview_customer_email">Email:</string>
    <string name="make_appointment_preview_services_title">Thông tin dịch vụ:</string>
    <string name="make_appointment_preview_service">Dịch vụ:</string>
    <string name="make_appointment_preview_service_staff">Nhân viên dịch vụ:</string>
    <string name="make_appointment_preview_car_category">Mẫu xe:</string>
    <string name="make_appointment_preview_car_vervision">Phiên bản xe:</string>
    <string name="make_appointment_preview_car_license_plate">Biển số xe:</string>
    <string name="make_appointment_preview_date">Thời gian:</string>
    <string name="make_appointment_preview_agency">Đại lý:</string>
    <string name="make_appointment_preview_tips_bottom">Nhân viên tư vấn dịch vụ sẽ liên hệ với Quý khách để xác nhận lịch hẹn trong thời gian sớm nhất.\n\nXin trân trọng cảm ơn!</string>
    <string name="dialog_confirm_exit_make_appoint_text">Thông tin đặt lịch hẹn dịch vụ sẽ không được lưu lai. Bạn có muốn tiếp tục?</string>
    <string name="registration">Đăng ký lái thử</string>
    <string name="registration_hint_name">Nhập họ tên</string>
    <string name="registration_hint_phone">Nhập số điện thoại</string>
    <string name="registration_hint_email">Nhập email</string>
    <string name="registration_hint_note">Nhập ghi chú</string>
    <string name="registration_register">Đăng ký</string>
    <string name="registration_title_city">Thành phố (*)</string>
    <string name="registration_title_agency">Đại lý (*)</string>
    <string name="registration_title_name">Họ tên (*)</string>
    <string name="registration_title_phone">Số điện thoại (*)</string>
    <string name="registration_title_email">Email (*)</string>
    <string name="registration_title_note">Ghi chú</string>
    <string name="registration_tip_update_profile">Cập nhật thông tin cá nhân bằng thông tin đăng ký.</string>
    <string name="login_request_title">Yêu cầu đăng nhập</string>
    <string name="login_request_message">Vui lòng đăng nhập để sử dụng tính năng này.</string>
    <string name="search_title">Tìm kiếm đại lý</string>
    <string name="search_filter">Tìm đại lý theo thành phố hoặc tên</string>
    <string name="search_or">hoặc</string>
    <string name="search_input_city">Nhập tên thành phố</string>
    <string name="search_input_agency">Nhập tên đại lý</string>
    <string name="search_button_title">Tìm kiếm</string>
    <string name="survey_error_answer_require">Quý khách vui lòng điền đầy đủ các thông tin có dấu (*)</string>
</resources>