<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.tvo.htc.view.component.CpnNavigationBar
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/search_title" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_margin="@dimen/margin_padding_0_5x" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_2x"
        android:gravity="center"
        android:text="@string/search_filter" />

    <Spinner
        android:id="@+id/spinCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_2x"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/search_input_city" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_padding_2x"
        android:text="@string/search_or"
        android:textSize="@dimen/text_size_20" />

    <EditText
        android:id="@+id/edtAgency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_2x"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/search_input_agency"
        android:padding="10dp" />

    <com.tvo.htc.view.component.CpnButton
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_4_5x"
        app:text="@string/search_button_title" />
</LinearLayout>