<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.tvo.htc.view.component.CpnNavigationBar
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:btNotificationVisibility="INVISIBLE"
        app:navigation_type="BACK"
        app:title="@string/login_request_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundSupport"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/margin_padding_1_5x">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_1_5x"
            android:src="@drawable/ic_login_request" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/margin_padding_3x"
            android:paddingTop="@dimen/margin_padding_3x"
            android:paddingRight="@dimen/margin_padding_3x"
            android:paddingBottom="@dimen/margin_padding_1x"
            android:text="@string/login_request_message"
            android:textSize="@dimen/text_size_17" />

        <com.tvo.htc.view.component.CpnButton
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/margin_padding_20x"
            android:layout_height="wrap_content"
            app:text="@string/login" />
    </LinearLayout>

</LinearLayout>